# Base-Z-47-Rust-Game

./: .gitignore  License.md  README.md  Scenario.md
BASE-Z47/: Cargo.toml
BASE-Z47/src/: backgroundthread.rs  main.rs  run.bat  view.rs
BASE-Z47/src/levels/: level1.rs  level11.rs  level12.rs  level16.rs  level17.rs  level19.rs  level20.rs  level21.rs  level23.rs  level24.rs  level26.rs  level27.rs  level28.rs  level31.rs  level32.rs  level33.rs  level35.rs  level36.rs  level37.rs  level39.rs  level4.rs  level40.rs  level45.rs  level47.rs  level48.rs  level52.rs  level53.rs  level58.rs  level59.rs  level6.rs  level7.rs  level9.rs  level_const.rs
BASE-Z47/src/view/: image3.rs
WASM/base-z47/: .htaccess  Cargo.toml  LICENSE_MIT  build.bat  build_rust_only.bat  cargo_watch.bat  debug.bat  run_web.bat
WASM/base-z47/src/: build.bat  build_rust_only.bat  levels.rs  lib.rs  model.rs  view.rs
WASM/base-z47/src/assets/: image1.txt
WASM/base-z47/src/levels/: level0.rs  level10.rs  level13.rs  level14.rs  level15.rs  level18.rs  level2.rs  level25.rs  level29.rs  level38.rs  level41.rs  level42.rs  level43.rs  level44.rs  level46.rs  level49.rs  level50.rs  level51.rs  level55.rs  level56.rs  level57.rs  level60.rs  level8.rs
WASM/base-z47/src/view/: image2.rs  image4.rs
rustsoko/: Cargo.toml  i586-rust_dos.json
rustsoko/src/: backgroundthread.rs  build_dos.bat  drawlevel.rs  images.rs  level1.rs  levels.rs  main.rs  model.rs  run.bat  settings.json  sound.rs  view.rs
rustsoko/src/07.01.2025/: backgroundthread.rs  level2.rs  main.rs
rustsoko/src/dotnet_level_parser/: dotnet_level_parser.csproj
rustsoko/src/images/: image1.rs  image2.rs
rustsoko/src/levels/: level2.rs  level22.rs  level3.rs  level30.rs  level34.rs  level5.rs  level54.rs  level61.rs_mod  level_const.rs
src/: BUILD_D.BAT  BUILD_R.BAT  DrawRect.asm  bitmap.asm  compile.bat  drawline.asm  fio.asm  heap.asm  main.asm  mem.asm  palette.asm  pixmap.asm
src/editor/homework 1/: editor.asm
src/editor/lesson 1/: COMPILE.BAT  editor.asm
src/editor/lesson 2/: call.asm  editor.asm
src/loderun/: BUILD_D.BAT  hero.asm
src/res/: image1.rs  logo1.pix
src/temp/: build_r.bat  test.asm
teach/Arithmetic/: !DEBUG.BAT  Arith.asm
tools/: BmpToVga.sln
tools/Base Z-47 resource manager/: App.xaml  App.xaml.cs  Base Z-47 resource manager.csproj  Base Z-47 resource manager.sln  MainWindow.xaml  MainWindow.xaml.cs
tools/BmpToVga/: App.xaml  App.xaml.cs  BmpToVga.csproj  MainWindow.xaml  MainWindow.xaml.cs
tools/dotnet_level_parser/: Program.cs  README.md
tools/poligon/: BUILD_R.BAT  fio.asm  main.asm  mem.asm
tools/poligon/loderun/: main.asm
tools/poligon/res/: image1.rs  logo1.pix
tools/poligon/temp/: VGAPal.asm  (+1 more)
(+2 files in other folders)
