[build]
rustflags = ["--cap-lints=allow"]

[package]
name = "basez47"
version = "1.0.0"
edition = "2021"

[dependencies]
rand = "0.8.0"
crossterm = "0.27"
console = "0.15.0"
rodio = { version = "0.20.1", default-features = false, features = ["symphonia-all"] }
once_cell = "1.18"
rgb = "0.8.43"
ansi_colours = "1.1"
rlibc = "1.0.0"

