[package]
name = "base-z47"
version = "0.1.0"
authors = ["Denis Kirin <39277935+KirinDenis@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys="0.3"
rgb = "0.8.43"
hex = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",       
    "Document",     
    "HtmlElement",  
    "HtmlCanvasElement", 
    "CanvasRenderingContext2d",
    "KeyboardEvent",
    "console"       
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
strip=true
opt-level = 1         # 1 or 2
lto = false           # (Link-Time Optimization)
debug = true
codegen-units = 16  
incremental = true  

# NOTE: very important to add the strip=true the PKG export function type related for this
